--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Eduardo R. Mendoza
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
   This site is powered by Jekyll and GitHub Pages. Design was derived from the minima theme. Some icons were loaded from Font Awesome and Academicons.
-baseurl: "/edmendoza.github.io" # the subpath of your site, e.g. /blog
-url: "https://yupaulk.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://ed-r-mendoza.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 facebook_username:
 github_username:
